--- a/Obligatorio2P2/Obligatorio2P2.csproj
+++ b/Obligatorio2P2/Obligatorio2P2.csproj
@@ -130,6 +130,14 @@
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
+    <Compile Include="Models\Client.cs" />
+    <Compile Include="Models\Common.cs" />
+    <Compile Include="Models\Company.cs" />
+    <Compile Include="Models\Product.cs" />
+    <Compile Include="Models\ProductStock.cs" />
+    <Compile Include="Models\Purchase.cs" />
+    <Compile Include="Models\SystemControl.cs" />
+    <Compile Include="Models\User.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
@@ -168,10 +176,12 @@
     <Content Include="Views\Home\About.cshtml" />
     <Content Include="Views\Home\Contact.cshtml" />
     <Content Include="Views\Home\Index.cshtml" />
+    <Content Include="Views\Admin\Admin.cshtml" />
+    <Content Include="Views\Client\Client.cshtml" />
+    <Content Include="Views\Guest\Guest.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
-    <Folder Include="Models\" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="fonts\glyphicons-halflings-regular.woff2" />
